Update testBuilder